homework for week01